--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,60 @@
+.loader {
+    color: #ffffff;
+    font-size: 45px;
+    text-indent: -9999em;
+    overflow: hidden;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    position: relative;
+    transform: translateZ(0);
+    animation: mltShdSpin 1.7s infinite ease, round 1.7s infinite ease;
+  }
+  
+  @keyframes mltShdSpin {
+    0% {
+      box-shadow: 0 -0.83em 0 -0.4em,
+      0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em,
+      0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    5%,
+    95% {
+      box-shadow: 0 -0.83em 0 -0.4em, 
+      0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 
+      0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    10%,
+    59% {
+      box-shadow: 0 -0.83em 0 -0.4em, 
+      -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, 
+      -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
+    }
+    20% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em,
+       -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, 
+       -0.749em -0.34em 0 -0.477em;
+    }
+    38% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em,
+       -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, 
+       -0.82em -0.09em 0 -0.477em;
+    }
+    100% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 
+      0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+  }
+  
+  @keyframes round {
+    0% { transform: rotate(0deg) }
+    100% { transform: rotate(360deg) }
+  }
+   
+
 form {
     display: flex;
     gap: 8px;
+    justify-content: center;
 }
 
 
@@ -18,6 +72,15 @@ form {
     border-radius: 4px;
     width: 272px;
     height: 40px;
+    margin-bottom: 32px;
+}
+
+.search-images:hover {
+  border-color: #000000;
+}
+
+.search-images:focus {
+    border-color: #6c8cff;
 }
 
 
@@ -35,3 +98,58 @@ button {
     letter-spacing: 0.04em;
     color: #fff;
 }
+
+.search-button:hover,
+.search-button:focus {
+  background-color: #6c8cff;
+}
+
+
+a {
+    font-family: sans-serif;
+}
+
+.gallery {
+    margin-top: 10px;
+}
+
+img {
+    height: 200px;
+    width: 360px;
+  }
+  
+.gallery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 24px;
+    column-gap: 24px;
+    list-style: none;
+}
+
+/* Збільшення фото при наведенні на нього
+/* img:hover {
+    transform: scale(1.04);
+    transition: all 0.2s linear
+} */
+
+.sl-wrapper{
+    background: #00000080;
+}
+
+.card-info {
+    padding: 8px 16px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 600;
+    text-align: center;
+  }
+
+
+  .card-info p {
+    font-weight: normal;
+  }
+
+  .card-item {
+    border: 1px solid #808080;
+  }
