--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,7 @@
 
 
 :root {
-  --font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
